feat: harden UAW-SDD2 workflow controls